AMDP-303 Fix spacing.

--- a/web/themes/custom/emoney_apigee_kickstart/sass/pages/_collections.scss
+++ b/web/themes/custom/emoney_apigee_kickstart/sass/pages/_collections.scss
@@ -2,6 +2,10 @@
   background-color: $gray_lightness;
 
   article[about=\/apis] {
+    div[data-layout-content-preview-placeholder-label="\"Content\" field"] {
+      margin-bottom: 0px;
+    }
+
     .layout {
       .block {
         &:last-of-type {
@@ -12,10 +16,16 @@
           font-size: 34px;
           font-weight: 700;
           line-height: 40px;
-          margin: 0 0 16px 0;
+          margin: 0 0 10px 0;
         }
 
         .text__field-text {
+          padding-top: 20px;
+
+          p {
+            margin-bottom: 1.5rem;
+          }
+          
           @include media-breakpoint-up(lg) {
             padding-left: 108px;
             padding-right: 108px;
